--- a/src/App.css
+++ b/src/App.css
@@ -14,18 +14,19 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #d0fa8d;
+  min-height: 10vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  text-shadow: #334713;
 }
 
 .App-link {
-  color: #61dafb;
+  color: #94e08a;
 }
 
 @keyframes App-logo-spin {
