--- a/src/index.css
+++ b/src/index.css
@@ -28,15 +28,16 @@ code {
 }
 
 body {
-  margin: 0;
+  margin: 5vw 5vh;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: var(--lightgreen);
+  background-color: #ffffff;
   padding: 2vmin;
-  height: 100vh;
+  height: 80vh;
+  width: 80vw;
 }
 
 code {
